<resources>
    <string name="app_name">Flinder</string>

    <string name="perfil">PERFIL</string>
    <string name="cartas">CARTAS</string>
    <string name="chat">CHAT</string>
    <string name="btnAjus">AJUSTES</string>
    <string name="btnPerfil">PERFIL</string>
    <string name="email">Correo Electronico</string>
    <string name="contrasenya">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="crearCuenta">¿No tienes una cuenta? ¡Create una!</string>
    <string name="registro">Registro</string>
    <string name="nombreDeUsuario">Nombre de usuario</string>
    <string name="repetirContrasenya">Repetir contraseña</string>
    <string name="siguiente">Siguiente</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="subirFoto">Subir foto</string>
    <string name="localidad">Localidad</string>
    <string name="fechaNacimiento">Seleccione la fecha de nacimiento</string>
    <string name="genero">Seleccione su genero</string>
    <string name="noEspecificar">Prefiero no especificar</string>
    <string name="queBusco">¿Que estas buscando?</string>
    <string name="aceptar">Aceptar</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="muestrame">Muestrame</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="guardar">Guardar</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="generoBinario">Genero Binario</string>
    <string name="ambos">Ambos</string>
    <string name="mensajeDeBusqueda">Seleccione lo que esta buscando</string>
    <string name="todo">Todo</string>
    <string name="espacioEnBlanco">No se puede dejar este espacio en blanco</string>
    <string name="correoInvalido">Dirección de correo no válida</string>
    <string name="noCoincide">Las contraseñas no coincide</string>
    <string name="comprobacion">Comprueba de que has introducido correctamente los datos</string>
    <string name="patternInvalido">Comprueba de que has introducido correctamente la contraseña, tiene que ser entre 4 y 20 carácteres</string>
    <string name="algoNoVa">Algo no va, Comprueba de que has rellenado todos los campos</string>
    <string name="seleccionaUnaFecha">Debe seleccionar una fecha</string>
    <string name="seleccionaGenero">Debe seleccionar un género</string>
    <string name="ponerNombre">Debe poner un nombre</string>
    <string name="ponerApellidos">Debe poner los apellidos</string>
    <string name="seleccionarFoto">Debe seleccionar alguna foto</string>
    <string name="errorBusqueda">¿Que estas buscando?</string>
    <string name="crearUsuarioConEmail">Se ha creado un nuevo usuario</string>
    <string name="crearUsuarioConEmailFalla">Algo va mal</string>
    <string name="subidaCompletada">Subida completada</string>
    <string name="notificacionesActivadas">Notificaciones Activadas</string>
    <string name="notificacionesDesactivadas">Notificaciones Desactivadas</string>
    <string name="desconectado">Desconectado</string>
    <string name="chatTab">CHAT</string>
    <string name="cartasTab">GENTE</string>
    <string name="perfilTab">PERFIL</string>
    <string name="enviar">Enviar</string>
</resources>
