<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registro"
                android:textColor="#ffff"
                android:textColorHint="#fff"
                android:textSize="76px"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/fotaca" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_foto_reg2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:text="@string/subirFoto" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:textColorHint="#fff"
                    android:textColor="#ffff">

                    <EditText
                        android:id="@+id/et_nombre_reg2"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:hint="@string/nombre"
                        android:textColor="#ffff"
                        android:textColorHint="#fff" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:textColorHint="#fff"
                    android:textColor="#ffff">

                    <EditText
                        android:id="@+id/et_apellidos_reg2"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:hint="@string/apellidos"
                        android:textColor="#ffff"
                        android:textColorHint="#fff" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:textColorHint="#fff"
            android:textColor="#ffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/localidad"
                android:textColor="#ffff"
                android:textColorHint="#fff" />

            <Spinner
                android:id="@+id/spinner_provincias_reg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:textColor="#ffff"
                android:textColorHint="#fff"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"

                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/fecha"
                        android:layout_width="wrap_content"
                        android:layout_height="90dp"
                        android:layout_marginTop="15dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/fechaNacimiento"
                        android:textColor="#ffff"
                        android:textColorHint="#fff" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/genero"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="35dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/genero"
                        android:textColor="#ffff"
                        android:textColorHint="#fff" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="44dp"
                    android:textColorHint="#fff"
                    android:textColor="#ffff">

                    <EditText
                        android:id="@+id/et_fechaSelector_reg2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:textColor="#ffff"
                        android:textColorHint="#fff" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="120dp">

                    <EditText
                        android:id="@+id/et_generoSel_reg2"
                        android:layout_width="match_parent"
                        android:layout_height="71dp"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:textColor="#ffff"
                        android:textColorHint="#fff" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_siguiente_reg2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="30dp"
            android:padding="12dp"
            android:text="@string/siguiente" />

    </LinearLayout>
</ScrollView>